# apex-bank-demo

./: .gitignore  01_dlt_pipeline.py  02_dlt_pipeline.py  03_unity_catalog_setup.sql  04_demo_walkthrough.sql  README.md  apex_architecture_current2-bits.py  apex_architecture_current2.py  generate_data.py  helper.sh  main.py  pyproject.toml
apex_bank_demo/: .gitignore  README.md  databricks.yml  pyproject.toml  reset-data.sh
apex_bank_demo/resources/: apex_bank_demo_etl.pipeline.yml  sample_job.job.yml
apex_bank_demo/scripts/: 00_setup_infrastructure.ipynb
apex_bank_demo/src/apex_bank_demo_etl/: README.md
apex_bank_demo/src/apex_bank_demo_etl/explorations/: demo_flow.ipynb  demo_validation.sql  demo_walkthrough.sql  feature_store.ipynb  sample_exploration.ipynb
apex_bank_demo/src/apex_bank_demo_etl/scripts/: 03_unity_catalog_setup.sql  generate_data.py
apex_bank_demo/src/apex_bank_demo_etl/transformations/: 01_transaction_pipeline.py  bronze_transactions.py  gold_account_features.py  gold_merchant_summary.py  mobile_events_stream.py  sample_trips_apex_bank_demo.py  sample_zones_apex_bank_demo.py  silver_transactions.py  silver_transactions_quarantine.py
apex_bank_demo/src/apex_bank_demo_etl/utilities/: 01_setup_infrastructure.ipynb  02_generate_data.py  03_unity_catalog_setup.sql
data/: synthetic_accounts.csv
